2014-10-24 Added Event on select rate and method getRate() in Page Rating
2014-10-24 Added Show Answers to Pie Chart module
2014-10-24 Added Show Answers to Points and Lines module
2014-10-24 Added new properties: "Row classes", "Show max score field", "Show page score" and "Disable score on pages" to Hierarchical Lesson Report
2014-10-24 Fixed displaying IWB Toolbar in editor preview
2014-10-23 Fixed issue with pulling up collumns reduced to 0 on mobile devices in Graph module
2014-10-23 Fixed problem with autoplaying after click on text fragment in TextAudio module
2014-10-23 Added playing and end events to MultiAudio
2014-10-23 Fixed issue with zoom, note and displaying elements in IWB Toolbar module
2014-10-23 Fixed stopwatch on mLibro windows in IWB toolbar module
2014-10-21 Fixed problem with autoplaying in MultiAudio module
2014-10-20 Improved Spanish translations
2014-10-17 A return full functionality mouseMoveCallback in Graph module
2014-10-17 Fixed issue with pulling up collumn reduced to 0 in Graph module
2014-10-16 Fixed issue with double rendered LaTeX in Choice
2014-10-16 Added handling property Is Visible in IWB Toolbar module
2014-10-15 Added collaboration between crossword and eKeyboard modules
2014-10-13 Added stopwatch, clock and changed view of panel in IWB Toolbar module
2014-10-13 Added new property: Real-time navigationbar-page-ok to Navigation Bar
2014-10-13 Fixed issue with getting JS representation of Check Button module
2014-10-13 Fixed showing Layered Image module on IOS 8.0.2
2014-10-09 Fixed issue with symbols in dropdown gaps for Table module
2014-10-09 Fixed issue with double lines in Connection module
2014-10-09 Added new version of Swiffy Animation module and swiffy library.
2014-10-09 Added Show Answers to Crossword module
2014-10-08 Fixed issue with double lines in Connection module
2014-10-06 Removed console.log from Text module
2014-10-06 Added Show Answers to Table module
2014-10-06 Removed unused libraries