@@ -780,7 +780,7 @@ function AddonIWB_Toolbar_create(){
 
                     var image = new Kinetic.Image({
                         x: imageObj.width / 2,
-                        y: $(window.top).scrollTop() + (imageObj.height / 2),
+                        y: $(window).scrollTop() + (imageObj.height / 2),
                         image: imageObj,
                         width: imageObj.width,
                         height: imageObj.height,
@@ -1084,7 +1084,7 @@ function AddonIWB_Toolbar_create(){
 
     function createStopwatch(savedStopwatch, hours, minutes, seconds, stopClicked, startClicked) {
         var stopwatch = $('<div class="iwb-toolbar-stopwatch"></div>'),
-            time = $('<h4><time>00:00:00</time></h4>'),
+            time = $('<h4 class="stopwatch-time"><time>00:00:00</time></h4>'),
             header = $('<div class="stopwatch-header"></div>'),
             buttons = $('<div class="stopwatch-buttons"></div>'),
             startButton = $('<div id="start"></div>'),
@@ -1140,7 +1140,7 @@ function AddonIWB_Toolbar_create(){
         }
         presenter.stopwatchAdded = true;
 
-        var h1 = document.getElementsByTagName('h4')[0],
+        var h1 = document.getElementsByClassName('stopwatch-time')[0],
             start = document.getElementById('start'),
             stop = document.getElementById('stop'),
             clear = document.getElementById('clear');
@@ -1303,7 +1303,7 @@ function AddonIWB_Toolbar_create(){
         closeButton.on('click', function(e) {
             e.stopPropagation();
             var confirmation = presenter.$removeConfirmationBox;
-            confirmation.css('top', $(window.top).scrollTop() + 10 + 'px');
+            confirmation.css('top', $(window).scrollTop() + 10 + 'px');
             confirmation.show();
             confirmation.find('.no-button').click(function(e) {
                 e.stopPropagation();
@@ -1800,8 +1800,13 @@ function AddonIWB_Toolbar_create(){
  */
 var zoom = (function(){
 
+    var TRANSITION_DURATION = 800;
+
     // The current zoom level (scale)
     var level = 1;
+
+    // Timeout for callback function
+    var callbackTimeout = -1;
 
     // Check for transform support so that we can fallback otherwise
     var supportsTransforms = 	'WebkitTransform' in document.body.style ||
@@ -1812,11 +1817,11 @@ var zoom = (function(){
 
     if( supportsTransforms ) {
         // The easing that will be applied when we zoom in/out
-        document.body.style.transition = 'transform 0.8s ease';
-        document.body.style.OTransition = '-o-transform 0.8s ease';
-        document.body.style.msTransition = '-ms-transform 0.8s ease';
-        document.body.style.MozTransition = '-moz-transform 0.8s ease';
-        document.body.style.WebkitTransition = '-webkit-transform 0.8s ease';
+        document.body.style.transition = 'transform '+ TRANSITION_DURATION +'ms ease';
+        document.body.style.OTransition = '-o-transform '+ TRANSITION_DURATION +'ms ease';
+        document.body.style.msTransition = '-ms-transform '+ TRANSITION_DURATION +'ms ease';
+        document.body.style.MozTransition = '-moz-transform '+ TRANSITION_DURATION +'ms ease';
+        document.body.style.WebkitTransition = '-webkit-transform '+ TRANSITION_DURATION +'ms ease';
     }
 
     // Zoom out if the user hits escape
@@ -1825,30 +1830,6 @@ var zoom = (function(){
             zoom.out();
         }
     } );
-
-    function getScrollOffset() {
-        return {
-            x: window.scrollX !== undefined ? window.scrollX : window.pageXOffset,
-            y: window.scrollY !== undefined ? window.scrollY : window.pageYOffset
-        }
-    }
-
-    function _magnify() {
-        var origin = window.currentOrigin[0] +'px '+ window.currentOrigin[1] +'px',
-            transform = 'translate('+ window.currentTransform[0] +'px,'+ window.currentTransform[1] +'px) scale('+ window.currentTransform[2] +')';
-
-        window.top.document.body.style.transformOrigin = origin;
-        window.top.document.body.style.OTransformOrigin = origin;
-        window.top.document.body.style.msTransformOrigin = origin;
-        window.top.document.body.style.MozTransformOrigin = origin;
-        window.top.document.body.style.WebkitTransformOrigin = origin;
-
-        window.top.document.body.style.transform = transform;
-        window.top.document.body.style.OTransform = transform;
-        window.top.document.body.style.msTransform = transform;
-        window.top.document.body.style.MozTransform = transform;
-        window.top.document.body.style.WebkitTransform = transform;
-    }
 
     /**
      * Applies the CSS required to zoom in, prefers the use of CSS3
@@ -1865,32 +1846,35 @@ var zoom = (function(){
         rect.width = rect.width || 1;
         rect.height = rect.height || 1;
 
-        if (window.parent.location != window.location) {
-//            rect.x -= 100;
-//            rect.y -= 100;
-            rect.y -= $(window.top).scrollTop();
-        } else {
-            rect.x -= ( window.innerWidth - ( rect.width * scale ) ) / 2 ;
-            rect.y -= ( window.innerHeight - ( rect.height * scale ) ) / 2;
-            // Center the rect within the zoomed viewport
-        }
+        // Center the rect within the zoomed viewport
+        rect.x -= ( window.innerWidth - ( rect.width * scale ) ) / 2;
+        rect.y -= ( window.innerHeight - ( rect.height * scale ) ) / 2;
 
         if( supportsTransforms ) {
             // Reset
             if( scale === 1 ) {
-                window.top.document.body.style.transform = '';
-                window.top.document.body.style.OTransform = '';
-                window.top.document.body.style.msTransform = '';
-                window.top.document.body.style.MozTransform = '';
-                window.top.document.body.style.WebkitTransform = '';
+                document.body.style.transform = '';
+                document.body.style.OTransform = '';
+                document.body.style.msTransform = '';
+                document.body.style.MozTransform = '';
+                document.body.style.WebkitTransform = '';
             }
             // Scale
             else {
+                var origin = scrollOffset.x +'px '+ scrollOffset.y +'px',
+                    transform = 'translate('+ -rect.x +'px,'+ -rect.y +'px) scale('+ scale +')';
 
-                window.currentOrigin = [scrollOffset.x, scrollOffset.y];
-                window.currentTransform = [-rect.x, - rect.y, scale];
+                document.body.style.transformOrigin = origin;
+                document.body.style.OTransformOrigin = origin;
+                document.body.style.msTransformOrigin = origin;
+                document.body.style.MozTransformOrigin = origin;
+                document.body.style.WebkitTransformOrigin = origin;
 
-                _magnify();
+                document.body.style.transform = transform;
+                document.body.style.OTransform = transform;
+                document.body.style.msTransform = transform;
+                document.body.style.MozTransform = transform;
+                document.body.style.WebkitTransform = transform;
             }
         }
         else {
@@ -1917,16 +1901,29 @@ var zoom = (function(){
         level = scale;
     }
 
+    function getScrollOffset() {
+        return {
+            x: window.scrollX !== undefined ? window.scrollX : window.pageXOffset,
+            y: window.scrollY !== undefined ? window.scrollY : window.pageYOffset
+        }
+    }
+
     return {
         /**
          * Zooms in on either a rectangle or HTML element.
          *
          * @param {Object} options
+         *
+         *   (required)
          *   - element: HTML element to zoom in on
          *   OR
          *   - x/y: coordinates in non-transformed space to zoom in on
          *   - width/height: the portion of the screen to zoom in on
          *   - scale: can be used instead of width/height to explicitly set scale
+         *
+         *   (optional)
+         *   - callback: call back when zooming in ends
+         *   - padding: spacing around the zoomed in element
          */
         to: function( options ) {
 
@@ -1942,33 +1939,32 @@ var zoom = (function(){
                 // If an element is set, that takes precedence
                 if( !!options.element ) {
                     // Space around the zoomed in element to leave on screen
-                    var padding = 20;
+                    var padding = typeof options.padding === 'number' ? options.padding : 20;
                     var bounds = options.element.getBoundingClientRect();
-                    var offsetTop = 0,
-                        offsetLeft = 0;
-                    if (window.parent.location != window.location) {
-                        var iframe = $(window.top.document).find('iframe');
-                        offsetLeft = iframe.offset().left;
-                        offsetTop = iframe.offset().top;
-                    }
-                    options.x = bounds.left + offsetLeft - padding;
-                    options.y = bounds.top + offsetTop - padding;
+
+                    options.x = bounds.left - padding;
+                    options.y = bounds.top - padding;
                     options.width = bounds.width + ( padding * 2 );
-                    options.height = options.element.scrollHeight + ( padding * 2 );
+                    options.height = bounds.height + ( padding * 2 );
                 }
 
                 // If width/height values are set, calculate scale from those values
                 if( options.width !== undefined && options.height !== undefined ) {
-                    var height = window.top.innerHeight;
-                    options.scale = Math.max( Math.min( window.top.innerWidth / options.width, height / options.height ), 1 );
+                    options.scale = Math.max( Math.min( window.innerWidth / options.width, window.innerHeight / options.height ), 1 );
                 }
 
                 if( options.scale > 1 ) {
                     options.x *= options.scale;
                     options.y *= options.scale;
 
+                    options.x = Math.max( options.x, 0 );
+                    options.y = Math.max( options.y, 0 );
+
                     magnify( options, options.scale );
 
+                    if( typeof options.callback === 'function' ) {
+                        callbackTimeout = setTimeout( options.callback, TRANSITION_DURATION );
+                    }
                 }
             }
         },
@@ -1988,18 +1984,6 @@ var zoom = (function(){
 
         zoomLevel: function() {
             return level;
-        },
-
-        scaleUp: function() {
-            //window.currentOrigin = [scrollOffset.x, scrollOffset.y];
-            window.currentTransform[2] += 0.1// = [-rect.x, - rect.y, scale];
-            _magnify();
-        },
-
-        scaleDown: function() {
-            //window.currentOrigin = [scrollOffset.x, scrollOffset.y];
-            window.currentTransform[2] -= 0.1// = [-rect.x, - rect.y, scale];
-            _magnify();
         }
     }
 
