@@ -1,3 +1,4 @@
+2014-10-29 Fixed working IWB Toolbar module on iframe
 2014-10-24 Added Event on select rate and method getRate() in Page Rating
 2014-10-24 Added Show Answers to Pie Chart module
 2014-10-24 Added Show Answers to Points and Lines module
